Добавил header-mobile

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,15 @@
 /* GLOBAL */
 @import "./global/variables.scss";
+@import "./global/mixins.scss";
 @import "./global/global.scss";
 @import "./global/fonts.scss";
 
+
 /* BLOCKS */
+@import "./blocks/visually-hidden.scss";
 @import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/user-menu.scss";
+@import "./blocks/burger-button.scss";
+
+
