--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,5 +1,16 @@
 .header {
-  background-color: #663399;
-  color: #ffffff;
-  padding: 10px 15px;
+  position: relative;
+  color: #333333;
+  // border: 0.5px solid silver;
+  max-width: 320px;
+  min-height: 60px;
+
+}
+
+.header__container {
+  padding: 12px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
