Добавил hero-mobile

--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,9 +1,9 @@
 //*** font-family ***//
-// $font-page: "Oswald", "Arial", sans-serif;
-// $font-second: "Lato", "Arial", sans-serif;
+$font-page: "Montserrat", sans-serif;
+
 
 //*** font-size ***//
-$font-small: 12px;
+$font-small: 14px;
 $font-medium: 16px;
 $font-large: 24px;
 $font-big: 36px;
@@ -11,9 +11,10 @@ $font-huge: 60px;
 
 //*** colors ***//
 $default-black: #000000;
-// $dark-color: #111111;
+$dark-color: #333333;
 $default-white: #ffffff;
-// $basic-green: #68b738;
+$basic-bg: #f3ebe1;
+$basic-violet: #7859cf;
 
 // $light-grey-a: #bababa;
 // $light-grey-b: #ebebeb;
