--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -7,9 +7,10 @@
 
 /* BLOCKS */
 @import "./blocks/visually-hidden.scss";
+@import "./blocks/wrapper.scss";
 @import "./blocks/header.scss";
+@import "./blocks/footer.scss";
 @import "./blocks/nav.scss";
-@import "./blocks/user-menu.scss";
 @import "./blocks/burger-button.scss";
 @import "./blocks/button.scss";
 @import "./blocks/main.scss";
