--- a/source/styles/blocks/buy.scss
+++ b/source/styles/blocks/buy.scss
@@ -4,6 +4,12 @@
   justify-content: space-between;
 }
 
+@media (min-width: $desktop-width) {
+  .buy {
+    padding: 0;
+  }
+}
+
 .buy__container {
   display: flex;
   align-items: center;
@@ -24,6 +30,6 @@
   line-height: 32px;
 }
 
-.buy__button {
+// .buy__button {
 
-}
+// }
