--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -4,6 +4,13 @@
   width: 100%
 }
 
+@media (min-width: $tablet-width) {
+  .nav {
+    position: relative;
+    margin: 0 auto;
+  }
+}
+
 .nav__list {
   @include list-reset;
   margin: 0 20px 0 -20px;
@@ -11,17 +18,86 @@
   flex-direction: column;
   align-items: center;
   background-color: $default-white;
+}
 
+@media (min-width: $tablet-width) {
+  .nav__list {
+    display: flex;
+    margin: 0 auto;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .nav__list {
+    gap: 20px;
+  }
 }
 
 .nav__item {
   width: 100%;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: uppercase;
-  padding: 20px 0;
+  padding: 20px 21px;
   border-top: 1px solid silver;
+
+  &--user {
+    border: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .nav__item {
+    width: min-content;
+  }
 }
 
 .nav__item:last-child {
   border-bottom: 1px solid silver;
+}
+
+.nav__item--user:last-child {
+  border: none;
+}
+
+@media (min-width: $tablet-width) {
+
+  .nav__item,
+  .nav__item:last-child {
+    border: none;
+  }
+}
+
+.nav__link {
+  @include link-style;
+  color: inherit;
+  display: flex;
+  gap: 9px;
+}
+
+.nav__link-text {
+  display: none;
+}
+
+@media (min-width: $desktop-width) {
+  .nav__link-text {
+    display: block;
+  }
+}
+
+
+.nav-user {
+  margin-left: auto;
+}
+
+.nav-user__list {
+  @include list-reset;
+  display: flex;
+  gap: 2px;
+  justify-content: flex-end;
 }
