--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -17,6 +17,8 @@
 @import "./blocks/hero.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/buy.scss";
+@import "./blocks/features.scss";
+
 
 
 
