--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -15,7 +15,7 @@ $dark-color: #333333;
 $default-white: #ffffff;
 $basic-bg: #f3ebe1;
 $basic-violet: #7859cf;
-
+$catalog-bg: #f8f8f8;
 // $light-grey-a: #bababa;
 // $light-grey-b: #ebebeb;
 // $light-grey-d: #cdcdcd;
