--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,14 +1,19 @@
 .button {
-width: 113px;
-height: 40px;
-padding: 8px 20px 8px 20px;
-border-radius: 4px;
-background-color: $basic-violet;
-color: $default-white;
-border: none;
-font-family: $font-page;
-font-size: 16px;
-line-height: 24px;
-font-weight: 400;
-}
+  // width: 113px;
+  height: 40px;
+  padding: 8px 20px 8px 20px;
+  border-radius: 4px;
+  background-color: $basic-violet;
+  color: $default-white;
+  border: none;
+  font-family: $font-page;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  cursor: pointer;
 
+  &--reset {
+    background-color: $default-white;
+    color: $basic-violet;
+  }
+}
