--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -18,7 +18,10 @@
 @import "./blocks/slider.scss";
 @import "./blocks/buy.scss";
 @import "./blocks/features.scss";
-
-
-
+@import "./blocks/catalog.scss";
+@import "./blocks/form.scss";
+@import "./blocks/price-filter.scss";
+@import "./blocks/range.scss";
+@import "./blocks/radio-input.scss";
+@import "./blocks/checkbox.scss";
 
