--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -24,4 +24,6 @@
 @import "./blocks/range.scss";
 @import "./blocks/radio-input.scss";
 @import "./blocks/checkbox.scss";
+@import "./blocks/product.scss";
+
 
