--- a/source/styles/global/fonts.scss
+++ b/source/styles/global/fonts.scss
@@ -8,6 +8,14 @@
 
 @font-face {
   font-family: "Montserrat";
+  src: url("../../fonts/montserrat-semi-bold.woff2") format("woff2"), url("../../fonts/montserrat-semi-bold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
   src: url("../../fonts/montserrat-medium.woff2") format("woff2"), url("../../fonts/montserrat-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
