Добавил pagination & map

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -24,8 +24,12 @@
 @import "./blocks/range.scss";
 @import "./blocks/radio-input.scss";
 @import "./blocks/checkbox.scss";
-@import "./blocks/select.scss";
 @import "./blocks/product.scss";
+@import "./blocks/select.scss";
+@import "./blocks/pagination.scss";
+@import "./blocks/map.scss";
+
+
 
 
 
