--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -3,11 +3,19 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 @media (min-width: $tablet-width) {
   .product__cards {
     gap: 28px;
+    margin-bottom: 70px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product__cards {
+    margin-bottom: 60px;
   }
 }
 
@@ -61,4 +69,20 @@
   align-items: center;
   gap: 7px;
   min-width: 141px;
+}
+
+.product__pagination {
+  margin-bottom: 40px;
+}
+
+@media (min-width: $tablet-width) {
+  .product__pagination {
+    margin-bottom: 90px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product__pagination {
+    margin-bottom: 120px;
+  }
 }
