--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -15,6 +15,7 @@ $dark-color: #333333;
 $default-white: #ffffff;
 $basic-bg: #f3ebe1;
 $basic-violet: #7859cf;
+$basic-violet-ligth: #f0ebff;
 $catalog-bg: #f8f8f8;
 // $light-grey-a: #bababa;
 // $light-grey-b: #ebebeb;
