--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -28,6 +28,11 @@
 @import "./blocks/select.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
+@import "./blocks/social.scss";
+@import "./blocks/endless-line.scss";
+
+
+
 
 
 
