--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -36,9 +36,23 @@
 
 .map__contetn {
   min-width: 280px;
-  min-height: 420px;
+  height: 420px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (min-width: $tablet-width) {
+  .map__contetn {
+    width: $tablet-width;
+    height: 480px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .map__contetn {
+    width: $desktop-width;
+    height: 540px;
+  }
 }
