--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -17,8 +17,8 @@ $basic-bg: #f3ebe1;
 $basic-violet: #7859cf;
 $basic-violet-ligth: #f0ebff;
 $catalog-bg: #f8f8f8;
-// $light-grey-a: #bababa;
-// $light-grey-b: #ebebeb;
+$light-grey-a: #e2e2e2;
+$light-grey-b: #bdbdbd;
 // $light-grey-d: #cdcdcd;
 
 // $light-grey2: #f2f2f2;
