--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -4,6 +4,7 @@
 @import "./global/fonts.scss";
 @import "./global/global.scss";
 
+@import "../vendor/nouislider.scss";
 
 /* BLOCKS */
 @import "./blocks/visually-hidden.scss";
