--- a/source/styles/blocks/range.scss
+++ b/source/styles/blocks/range.scss
@@ -1,52 +1,152 @@
-/* Полоса "Range" и её состояния */
+// /* Полоса "Range" и её состояния */
+// .range {
+//   width: 100%;
+//   margin-bottom: 34px;
+// }
+
+// .range__scale {
+//   position: relative;
+//   height: 2px;
+//   background-color: #e2e2e2;
+//   border-radius: 2px;
+//   margin: auto 0;
+// }
+
+// .range__bar {
+//   position: absolute;
+//   width: 240px;
+//   height: 4px;
+//   background-color: $basic-violet;
+// }
+
+// .range__toggle {
+//   position: absolute;
+//   width: 20px;
+//   height: 20px;
+//   background: $default-white;
+//   border: 2px solid $basic-violet;
+//   border-radius: 50%;
+//   cursor: pointer;
+// }
+
+// .range__toggle--min {
+//   top: -8px;
+//   left: 0;
+// }
+
+// .range__toggle--max {
+//   top: -8px;
+//   right: 0;
+// }
+
+// .range__toggle:hover {
+//   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+// }
+
+// .range__toggle:focus {
+//   outline: 3px solid #83b3d3;
+// }
+
+// .range__toggle:active {
+//   outline: 2px solid #83b3d3;
+// }
+
+.range__container {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 0 0 20px;
+}
+
 .range {
-  width: 100%;
+  // padding: 48px 0;
+  width: 280px;
+  // padding-right: 20px;
   margin-bottom: 34px;
 }
 
-.range__scale {
-  position: relative;
-  height: 2px;
-  background-color: #e2e2e2;
-  border-radius: 2px;
-  margin: auto 0;
+.range__slider {
+  margin-bottom: 24px;
 }
 
-.range__bar {
-  position: absolute;
-  width: 240px;
+.range__values input {
+  border: none;
+  height: 48px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: inherit;
+}
+
+.range__values input:nth-child(1) {
+  border: 2px solid $basic-violet;
+}
+
+.range__values input:nth-child(2) {
+  background: $basic-violet;
+}
+
+.range__values input:focus {
+  outline: none;
+}
+
+.noUi-target {
+  border: none;
+  background: none;
+}
+
+.noUi-handle {
+  border: none;
+  border-radius: 50%;
+}
+
+.noUi-handle:before,
+.noUi-handle:after {
+  display: none;
+}
+
+.noUi-handle-lower {
+  background: $default-white;
+  border: 2px solid $basic-violet;
+}
+
+.noUi-handle-upper {
+  background: $default-white;
+  border: 2px solid $basic-violet;
+}
+
+.noUi-horizontal {
+  height: 3px;
+  background-color: $catalog-bg;
+}
+
+.noUi-connects {
+  background: linear-gradient(
+    to bottom,
+    $catalog-bg 25%,
+    $light-grey-a 25% 75%,
+    $catalog-bg 75%
+  );
   height: 4px;
+}
+
+.noUi-connect {
   background-color: $basic-violet;
 }
 
-.range__toggle {
-  position: absolute;
+.noUi-horizontal .noUi-handle {
   width: 20px;
   height: 20px;
-  background: $default-white;
-  border: 2px solid $basic-violet;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.range__toggle--min {
   top: -8px;
-  left: 0;
+  right: -2px;
 }
 
-.range__toggle--max {
-  top: -8px;
-  right: 0;
+.noUi-tooltip {
+  display: none;
 }
 
-.range__toggle:hover {
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-}
-
-.range__toggle:focus {
-  outline: 3px solid #83b3d3;
-}
-
-.range__toggle:active {
-  outline: 2px solid #83b3d3;
+.noUi-base {
+  background-color: $catalog-bg;
+  height: 1px;
 }
