--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -18,12 +18,33 @@
   flex-direction: column;
   align-items: center;
   background-color: $default-white;
+  opacity: 0;
+  animation: fadeInFromNone 0.5s ease-in-out;
 }
+
+@keyframes fadeInFromNone {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+
+  1% {
+    display: block;
+    opacity: 0;
+  }
+
+  100% {
+    display: block;
+    opacity: 1;
+  }
+}
+
 
 .nav__list-open {
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 1;
 }
 
 @media (min-width: $tablet-width) {
@@ -50,7 +71,7 @@
   text-align: center;
   text-transform: uppercase;
   padding: 20px 21px;
-  border-top: 1px solid silver;
+  border-bottom: 1px solid #F0EBFF;
 
   &--user {
     border: none;
@@ -62,14 +83,6 @@
   .nav__item {
     width: min-content;
   }
-}
-
-.nav__item:last-child {
-  border-bottom: 1px solid silver;
-}
-
-.nav__item--user:last-child {
-  border: none;
 }
 
 @media (min-width: $tablet-width) {
