--- a/source/styles/global/variables.scss
+++ b/source/styles/global/variables.scss
@@ -1,5 +1,5 @@
 //*** font-family ***//
-$font-page: "Montserrat", sans-serif;
+$font-page: "Montserrat", "Arial", sans-serif;
 
 
 //*** font-size ***//
@@ -16,6 +16,8 @@ $default-white: #ffffff;
 $basic-bg: #f3ebe1;
 $basic-violet: #7859cf;
 $basic-violet-ligth: #f0ebff;
+$basic-violet-hover: #9070ec;
+$basic-violet-active: #593cac;
 $catalog-bg: #f8f8f8;
 $light-grey-a: #e2e2e2;
 $light-grey-b: #bdbdbd;
