--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,5 +1,4 @@
 .button {
-  // width: 113px;
   height: 40px;
   padding: 8px 20px 8px 20px;
   border-radius: 4px;
@@ -11,9 +10,37 @@
   line-height: 24px;
   font-weight: 400;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+
+  &:hover {
+    background-color: $basic-violet-hover;
+  }
+
+  &:active {
+    background-color: $basic-violet-active;
+  }
+
+  &:disabled {
+    background-color: $light-grey-b;
+    cursor: auto;
+  }
 
   &--reset {
     background-color: $default-white;
     color: $basic-violet;
+  }
+
+  &--reset:hover {
+    color: $default-white;
+  }
+
+  &--reset:active {
+    color: $default-white;
+  }
+
+  &--reset:disabled {
+    background-color: $light-grey-a;
+    color: $default-white;
+    cursor: auto;
   }
 }
