--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -157,6 +157,7 @@
 #slider {
   overflow: auto;
   scrollbar-width: none;
+  position: relative;
 }
 
 #slider::-webkit-scrollbar {
@@ -165,23 +166,50 @@
 
 #prev,
 #next {
+  position: absolute;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   background: none;
   border: none;
-  padding: 8px;
-  border-radius: 50%;
   outline: 0;
   cursor: pointer;
-  position: absolute;
+
+  &:hover {
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+  }
+
+  &:focus {
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+  }
+
+  &:active {
+    background: linear-gradient(90.00deg, rgba(120, 89, 207, 0.25), rgba(120, 89, 207, 0) 100%);
+  }
 }
 
 #prev {
-  top: 45%;
-  left: 15px;
+  width: 80px;
+  height: 714px;
+  top: 0;
+  left: -64px;
+  // background-color: yellow;
+  top: 0;
+  left: -64px;
 
-  transform: translate(-142%, 48%);
+  &:disabled {
+    opacity: 0.2;
+    cursor: auto;
+  }
+}
+
+#next {
+  // background-color: yellow;
+  width: 80px;
+  height: 714px;
+  top: 0;
+  right: -12px;
+  transform: rotate(180deg);
 
   &:disabled {
     opacity: 0.2;
@@ -190,22 +218,13 @@
 }
 
 .prev-img {
-  display: block;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0 4.5px;
   width: 11px;
   height: 20px;
   background-image: url("../../images/icons/slider-arrow.svg");
   background-size: cover;
-}
-
-#next {
-  top: 45%;
-  right: -60px;
-  transform: translate(-147%, 47%) rotate(180deg);
-
-  &:disabled {
-    opacity: 0.2;
-    cursor: auto;
-  }
 }
 
 #content {
@@ -235,13 +254,20 @@
 
 .slider__pagination {
   position: absolute;
-  display: inline-block;
+  display: none;
   left: 580px;
   bottom: 70px
 }
 
+@media (min-width: $desktop-width) {
+  .slider__pagination {
+    display: inline-block;
+
+  }
+}
+
+
 .slider__pagination-list {
-  @include list-reset;
   display: flex;
   gap: 8px;
 }
@@ -250,4 +276,11 @@
   width: 62px;
   height: 4px;
   background-color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+
+  &:focus {
+    outline: none;
+  }
 }
